--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@react-icons/all-files": "^4.1.0",
     "@tabler/icons-react": "^3.14.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.2",
+    "framer-motion": "^11.5.4",
     "lenis": "^1.1.13",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
